Fix animations for Horses, Add timer
Fixed horse animations so that they go off screen instead of reseting, added a timer so we know how long the race is taking

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
 #animated-image {
     position: absolute;
     animation: moveImage linear;
+    animation-fill-mode: forwards;
 }
 
 @keyframes moveImage {
